--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,11 @@
 name: Cisco 9800 Wireless controller labs
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: An introduction to the deployment of wireless enterprise networks
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+#avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/nschyns/nschyns.github.io/blob/master/images/cisco-logo.png
 
 #
 # Flags below are optional
@@ -18,10 +19,10 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: nschyns@cisco.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: nschyns/nschyns.github.io
   instagram:
   linkedin:
   pinterest:
