--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@
 #
 
 # Name of your site (displayed in the header)
-name: Cisco 9800 Wireless controller labs
+name: Cisco 9800 Wireless Controller labs
 
 # Short bio or description (displayed in the header)
 description: An introduction to the deployment of wireless enterprise networks
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 #avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-avatar: https://github.com/nschyns/nschyns.github.io/blob/master/images/cisco-logo.png
+avatar: https://raw.githubusercontent.com/nschyns/nschyns.github.io/master/images/cisco-logo.png
 
 #
 # Flags below are optional
@@ -27,7 +27,7 @@ footer-links:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
