--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ footer-links:
   flickr:
   github: nschyns/nschyns.github.io
   instagram:
-  linkedin:
+  linkedin: www.linkedin.com/in/nschyns
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
